refactor: remove unecessary reflection and rewrites some functions